--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.3",
     "openai": "^4.51.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "picocolors": "1.1.1"
   },
   "devDependencies": {
-    "eslint": "8.57.0",
-    "nodemon": "3.1.0"
+    "nodemon": "3.1.0",
+    "standard": "^17.1.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "standard"
+    ]
   }
 }
