--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcrypt": "5.1.1",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
-    "ejs": "^3.1.10",
-    "express": "^4.21.1",
-    "glob": "^11.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.5",
-    "openai": "^4.51.0",
-    "pdf-parse": "^1.1.1",
-    "pdfkit": "^0.15.1",
+    "ejs": "3.1.10",
+    "express": "4.21.1",
+    "glob": "11.0.0",
+    "jsonwebtoken": "9.0.2",
+    "morgan": "1.10.0",
+    "multer": "1.4.5-lts.1",
+    "mysql2": "3.11.5",
+    "openai": "4.51.0",
+    "pdf-parse": "1.1.1",
+    "pdfkit": "0.15.1",
     "picocolors": "1.1.1",
-    "rimraf": "^6.0.1"
+    "rimraf": "6.0.1"
   },
   "devDependencies": {
     "nodemon": "3.1.0",
-    "standard": "^17.1.2"
+    "standard": "17.1.2"
   },
   "eslintConfig": {
     "extends": [
