--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "ejs": "3.1.10",
-    "express": "4.21.1",
+    "express": "^4.21.2",
     "glob": "11.0.0",
     "jsonwebtoken": "9.0.2",
     "morgan": "1.10.0",
